<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    android:background="@drawable/foodbackimg"
    tools:context=".DinnerActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test3"
            android:textColor="#ffffff"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="30dp"/>
    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_food"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/dinner_food_01"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="3"
        android:orientation="vertical">

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:gravity="center"
            android:text="@string/thisis"
            android:onClick="clickThis"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:gravity="center"
            android:text="@string/RePlay"
            android:onClick="clickChange"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:gravity="center"
            android:text="@string/BordGo"
            android:onClick="clickBord"/>


    </LinearLayout>

</LinearLayout>