<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/backimg"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <TextView
            android:id="@+id/tv_bf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test1"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:textStyle="bold"
            android:paddingBottom="50dp"
            android:onClick="clickBtn1"/>

        <TextView
            android:id="@+id/tv_lc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test2"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="clickBtn2"/>

        <TextView
            android:id="@+id/tv_dn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test3"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:textStyle="bold"
            android:paddingTop="50dp"
            android:onClick="clickBtn3"/>

    </LinearLayout>








</RelativeLayout>